journal/service.yml
kind: Service
apiVersion: v1
metadata:
  name: svc-journal-exchange
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      name: http
